# The-Shell

./: README.txt  cscd340lab7out.txt
Lab7/: .posh_history  .poshrc  CMakeLists.txt  Makefile  cscd340Lab7.c  lab7
Lab7/fileUtils/: fileUtils.c  fileUtils.h
Lab7/linkedlist/: linkedList.c  linkedList.h  listUtils.c  listUtils.h
Lab7/myAlias/: myAlias.c  myAlias.h
Lab7/myCommand/: myCommand.c  myCommand.h
Lab7/pipes/: pipes.c  pipes.h
Lab7/process/: process.c
Lab7/tokenize/: makeArgs.c
Lab7/utils/: myUtils.c  myUtils.h
